# race2_auv

./: CMakeLists.txt  README.md  package.xml
race2_auv/: package.xml
race2_bringup/: CMakeLists.txt  package.xml
race2_bringup/launch/: bringup_helm.launch  bringup_simulation.launch  bringup_vehicle.launch  calibration_imu.launch  test_gpsd.launch  test_onboard_sensor.launch
race2_bringup/launch/include/: control.launch.xml  description.launch.xml  gps_gpsd.launch.xml  gps_nmea.launch.xml  joystick.launch.xml  localization.launch.xml  localization_sim.launch.xml  madgwick_filter.launch.xml  monitor.launch.xml  nucleus_dvl.launch.xml  pi_pico.launch.xml  xsens_imu.launch.xml
race2_config/: CMakeLists.txt  package.xml
race2_config/bash/: setup_gps_baudrate.sh
race2_config/config/: bluerobotcs_ping360.yaml  control.yaml  control_sim.yaml  navsat.yaml  pi_pico.yaml  power_minitor.yaml
race2_config/mission/config/: helm.yaml
race2_config/mission/param/: direct_control.yaml  direct_control_cont.yaml  gps_wpt.yaml  path_3d.yaml  path_local.yaml  periodic_surfacing.yaml  teleop.yaml
race2_config/mission/param/archives/: gps_wpt.old
race2_description/: CMakeLists.txt  package.xml
race2_description/launch/: description.launch
race2_description/rviz/: config.rviz
race2_description/urdf/: base.urdf.xacro
