<?xml version="1.0"?>
<package format="2">
  <name>alpha_ins_auv</name>
  <version>0.0.0</version>
  <description>The alpha_ins_auv package</description>

  <maintainer email="farhang.naderi@uri.edu">Emir Cem Gezer</maintainer>
  <author email="farhang.naderi@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
