<?xml version="1.0"?>
<package format="2">
  <name>race2_auv</name>
  <version>0.0.0</version>
  <description>The race2_auv package</description>

  <maintainer email="farhang.naderi@uri.edu">Farhang Naderi</maintainer>
  <author email="farhang.naderi@uri.edu">Farhang Naderi</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
