<?xml version="1.0"?>
<package format="2">
  <name>race2_bringup</name>
  <version>0.0.0</version>
  <description>The race2_bringup package</description>

  <maintainer email="farhang.naderi@uri.edu">Farhang Naderi</maintainer>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>
  <author email="farhang.naderi@uri.edu">Farhang Naderi</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <depend>alpha_driver</depend>
  <depend>alpha_teleop</depend>
  <depend>alpha_sci_description</depend>
  <depend>waterlinked_dvl</depend>
  <depend>image_transport_plugins</depend>
  <depend>imu_tools</depend> -->
  <export>

  </export>
</package>
