<?xml version="1.0"?>
<package format="2">
  <name>race2_config</name>
  <version>0.0.0</version>
  <description>The race2_config package</description>

  <maintainer email="farhang.naderi@uri.edu">Farhang Naderi</maintainer>
  <author email="farhang.naderi@uri.edu">Farhang Naderi</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
